# LIVE-CODE-BASE-DEBUGGING-ORACLE

./: .dockerignore  .env.compose  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  tests.yml
docker/: Dockerfile
docker/qdrant/: config.yaml
docs/: ARCHITECTURE.md  CONFIGURATION.md  ERROR_PAYLOADS.md  INTEGRATIONS.md  MCP_CONFIG.md  QUICKSTART.md  TROUBLESHOOTING.md  error_formats.md  mcp_tools.md
scripts/: verify_phase_1.sh  verify_phase_2.sh  verify_phase_3.sh  verify_phase_4.sh  verify_phase_5.sh  verify_phase_6.sh
specs/: README.md  architecture.md  mission.md  roadmap.md  tech-stack.md
specs/2026-04-30-phase-1-foundation/: plan.md  requirements.md  validation.md
specs/2026-05-23-phase-2-indexing-pipeline/: plan.md  requirements.md  validation.md
specs/2026-06-10-phase-3-retrieval-error-ingestion/: plan.md  requirements.md  validation.md
specs/2026-06-13-phase-4-fix-generation-mcp-tools/: plan.md  requirements.md  validation.md
specs/2026-06-13-phase-5-oss-hardening/: plan.md  requirements.md  validation.md
specs/2026-06-14-phase-6-docker-removal/: plan.md  requirements.md  validation.md
src/git_debug_oracle/: __init__.py  config.py  server.py  types.py
src/git_debug_oracle/embedder/: __init__.py  batch_processor.py  openai_client.py  voyage_client.py
src/git_debug_oracle/error_ingestion/: __init__.py  models.py  parsers.py  stacktrace.py
src/git_debug_oracle/fix_generation/: claude_client.py  context.py  fallback.py  parser.py  pipeline.py  scoring.py
src/git_debug_oracle/fix_generator/: __init__.py
src/git_debug_oracle/git_watcher/: __init__.py  commit_tracker.py  repo_reader.py
src/git_debug_oracle/indexer/: __init__.py  chunker.py  file_filter.py  metadata.py  pipeline.py
src/git_debug_oracle/mcp_tools/: __init__.py  debug_error.py  get_index_status.py  index_repo.py  schemas.py
src/git_debug_oracle/utils/: logging.py  (+1 more)
tests/: __init__.py  conftest.py
tests/integration/: test_indexing_pipeline.py  test_phase3_integration.py  test_phase4_pipeline.py
tests/unit/: test_batch_processor.py  test_chunker.py  test_commit_tracker.py  test_config.py  test_domain_models.py  test_error_parser.py  test_file_filter.py  test_git_diff_retriever.py  test_logging.py  test_mcp_get_index_status.py  test_mcp_index_repo.py  test_metadata.py  test_openai_client.py  test_phase4_models.py  test_qdrant_client.py  test_qdrant_collection.py  test_qdrant_retriever.py  test_query_constructor.py  test_recency_weighting.py  test_repo_reader.py  test_result_formatter.py  test_server.py  test_stacktrace_go.py  test_stacktrace_java.py  test_stacktrace_javascript.py  test_stacktrace_normalization.py  test_stacktrace_python.py  test_voyage_client.py  test_webhook_endpoint.py
(+7 files in other folders)
